# github-wikidata-bot

./: .editorconfig  .gitignore  .travis.yml  Dockerfile  Pipfile  README.md  error.py  free_licenses.rq  free_software_items.rq  github.py  interactive.ipynb  main.py  main_test.py  pyproject.toml  requirements.txt  settings.py  test-program.py  test-programm.py  tools.py  user-config.py  utils.py  utils_test.py  versionhandler.py  versionhandler_test.py
.github/: dependabot.yml
.github/workflows/: test.yml
.ipynb_checkpoints/: interactive-checkpoint.ipynb
github_wikidata_bot/: __main__.py  find_missing_repos.py  github.py  main.py  redirects.py  settings.py  utils.py  utils_test.py  versionhandler.py  versionhandler_test.py
src/: free_software_items_with_multiple_repos.rq  free_software_versions.rq  free_software_without_repository.rq
src/github_wikidata_bot/: __main__.py  find_missing_repos.py  github.py  github_test.py  main.py  project.py  redirects.py  session.py  session_test.py  settings.py  sparql.py  sparql_test.py  utils.py  utils_test.py  version.py  version_test.py  versionhandler_test.py  website.py  wikidata.py  wikidata_api.py  wikidata_api_test.py  wikidata_update.py
src/sparql/: free_software_items.rq
