[project]
name = "github-wikidata-bot"
version = "0.4.0"
requires-python = ">=3.10"
license = { text = "BSD-2-Clause-Patent" }

[tool.poetry]
name = "github-wikidata-bot"
version = "0.4.0"
description = "Updates Wikidata entries using metadata from github"
authors = ["konstin <konstin@mailbox.org>", "Michael Schönitzer <michael@schoenitzer.de>"]

[tool.poetry.dependencies]
python = "^3.12"
pywikibot = "^8.0.1"
mwparserfromhell = "^0.6.4"
CacheControl = { version = "^0.14.0", extras = ["filecache"] }
yarl = "^1.3"
sentry-sdk = "^2.0.1"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.0.0"
ruff = "^0.4.2"
tqdm = "^4.66.4"
types-requests = "^2.31.0.20240406"

[tool.ruff.lint]
extend-select = ["B", "PT", "PTH", "TRY", "UP"]
ignore = ["TRY400"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
