[project]
name = "github-wikidata-bot"
version = "0.4.0"
requires-python = ">=3.12"
license = "BSD-2-Clause-Patent"
description = "Updates Wikidata entries using metadata from github"
authors = [
    { name = "konstin", email = "konstin@mailbox.org" },
    { name = "Michael Schönitzer", email = "michael@schoenitzer.de" },
]
dependencies = [
    "hishel[httpx] >=1.1.7,<2.0.0",
    "httpx >=0.28.1,<0.29.0",
    "mwparserfromhell >=0.7,<0.8",
    "pydantic >=2.7.1,<3",
    "pywikibot >=10.1.0,<11",
    "sentry-sdk >=2.0.1,<3",
    "yarl >=1.9,<2",
]

[dependency-groups]
dev = [
    "httpx >=0.28.0,<0.29",
    "pytest >=9.0.0,<10.0.0",
    "ruff >=0.14,<0.15",
    "tqdm >=4.66.4,<5",
    "ty >=0.0.4,<0.1",
]

[tool.ruff.lint]
extend-select = ["B", "PT", "PTH", "TRY", "UP"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["uv_build >=0.9,<0.10"]
build-backend = "uv_build"
