[project]
name = "github-wikidata-bot"
version = "0.4.0"
requires-python = ">=3.14"
license = "BSD-2-Clause-Patent"
description = "Updates Wikidata entries using metadata from github"
authors = [
    { name = "konstin", email = "konstin@mailbox.org" },
    { name = "Michael Schönitzer", email = "michael@schoenitzer.de" },
]
dependencies = [
    "httpx >=0.28.1,<0.29.0",
    "pydantic >=2.7.1,<3",
    "sentry-sdk >=2.0.1,<3",
    "yarl >=1.9,<2",
]

[dependency-groups]
dev = [
    "anyio >=4,<5",
    "httpx >=0.28.0,<0.29",
    "pytest >=9.0.0,<10.0.0",
    "ruff >=0.15,<0.16",
    "tqdm >=4.66.4,<5",
    "ty >=0.0.4,<0.1",
]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = ["B", "I002", "PT", "PTH", "TRY", "UP"]
extend-ignore = ["TRY003", "TRY400"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["uv_build >=0.11,<0.12"]
build-backend = "uv_build"
